[package]
name = "time-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    # "tokio",
    # "smol",
    # "wasm-timer",
]

[dependencies]
thiserror = "1.0"
futures-util = "0.3"
pin-project-lite = "0.2"
slab = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Optional dependencies
tokio = { version = "1.0", features = ["time"], optional = true }
smol = { version = "1.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Optional dependencies
wasm-timer = { version = "0.2", optional = true }